Fix image carousel margins and heights on mobile and small screens

--- a/src/main.css
+++ b/src/main.css
@@ -9,3 +9,15 @@
 .social-icon:before {
     font-size: 24px;
 }
+
+.fade-carousel{
+    padding-inline: 25%;
+    -webkit-mask-image: linear-gradient(to right, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 25%, rgba(0,0,0,1) 75%, rgba(0,0,0,0) 100%);
+}
+
+@media (max-width: 640px){
+    .fade-carousel{
+        padding-inline: 35%;
+        mask-image: none;
+    }
+}
